--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -258,6 +258,10 @@ input[type="submit"]:hover{
   .attribution{
     font-size: 1.6rem;
   }
+
+  .footer{
+    margin-top: 12rem;
+  }
 }
 
 @media screen and (min-width: 1200px){
@@ -267,5 +271,9 @@ input[type="submit"]:hover{
 
   .title{
     font-size: 5rem;
+  }
+
+  .footer{
+    margin-top: 20rem;
   }
 }
